# latex-ocr

./: .gitignore  pyproject.toml
notebook/: 0_data_preprocess.ipynb  1_crnn.ipynb
